# trunk-processor

./: .dockerignore  .env.example  .envrc.example  .gitignore  .lefthook.toml  .lefthook.yaml  .mise.toml  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: publish-container.yaml
migrations/2025-10-25-144851-0000_create_talkgroup/: down.sql  up.sql
migrations/2025-10-25-144853-0000_create_calls/: down.sql  up.sql
migrations/2025-10-25-144902-0000_create_freqlist/: down.sql  up.sql
migrations/2025-10-25-144905-0000_create_sources/: up.sql
migrations/2025-10-25-144908-0000_create_srclist/: down.sql  up.sql
src/: common.rs  config.rs  error.rs  main.rs  model.rs  schema.rs  upload.rs
